tests/NormalTests/paczka1/fuzzy1/41924521.err
Error in line 6: A868 S44 210,4
Error in line 14: mwjkM S44 16,7
Error in line 18: aj5qrdWTJ S44 11,2
Error in line 20: 180Dvx6h A868 37,48
Error in line 19: aj5qrdWTJ A359 31,6
Error in line 21: HFARzKyP3jC A359 8,7
Error in line 23: HFARzKyP3jC S44 31,8
Error in line 22: aj5qrdWTJ S704 46,6
Error in line 17: mwjkM A359 49,6
Error in line 35: aj5qrdWTJ A868 248,7
Error in line 31: HFARzKyP3jC A359 82,0
